# winaskpass

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  release-please.yml  rust.yml
src/: credential.rs  credential_native.rs  dialog.rs  dialog_native.rs  main.rs
