[package]
name = "winaskpass"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Scarpino <andrea@scarpino.dev>"]
description = "ssh-add helper for WSL that stores passphrases in Windows Credential Manager"
repository = "https://github.com/ilpianista/winaskpass"
license = "MIT"
readme = "README.md"
keywords = ["askpass", "wsl", "cli"]
exclude = [
  "/.gitignore"
]

[dependencies]
anyhow = "1.0"
