[package]
name = "winaskpass"
version = "0.4.0"
edition = "2024"
authors = ["Andrea Scarpino <andrea@scarpino.dev>"]
description = "ssh-add helper for WSL that stores passphrases in Windows Credential Manager"
repository = "https://github.com/ilpianista/winaskpass"
license = "MIT"
readme = "README.md"
keywords = ["askpass", "wsl", "cli"]
exclude = [
  "/.gitignore"
]

[features]
default = ["powershell"]
powershell = []
native = ["windows"]

[dependencies]
anyhow = "1.0"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
], optional = true }
